[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/UITitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UITheme/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/LevelSelector/LevelSelector.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/UIButtonFont.tres" type="DynamicFont" id=4]

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="LevelSelectorPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="LevelSelectorPanel"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 1 )
text = "Select Level"
align = 1
valign = 1

[node name="LevelScroll" type="ScrollContainer" parent="LevelSelectorPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -390.0
margin_bottom = 390.0
scroll_horizontal_enabled = false

[node name="HBox" type="HBoxContainer" parent="LevelSelectorPanel/LevelScroll"]
margin_right = 1928.0

[node name="ColorRect" type="ColorRect" parent="LevelSelectorPanel/LevelScroll/HBox"]
margin_right = 580.0
rect_min_size = Vector2( 580, 0 )
color = Color( 1, 1, 1, 0 )

[node name="GridContainer" type="GridContainer" parent="LevelSelectorPanel/LevelScroll/HBox"]
margin_left = 584.0
margin_right = 1344.0
rect_min_size = Vector2( 760, 0 )
columns = 2

[node name="ColorRect2" type="ColorRect" parent="LevelSelectorPanel/LevelScroll/HBox"]
margin_left = 1348.0
margin_right = 1928.0
rect_min_size = Vector2( 580, 0 )
color = Color( 1, 1, 1, 0 )

[node name="BackButton" type="Button" parent="LevelSelectorPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -79.0
margin_right = 220.0
margin_bottom = -23.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Back"

[connection signal="pressed" from="LevelSelectorPanel/BackButton" to="." method="_on_BackButton_pressed"]
